                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-09-2006 fixed: Wordwrapping added an extra (unnecessary) linebreak.  Thanks to Kryzys
 - 21-09-2006 fixed: <origin> tag wasn't reset in windows that didn't have them when loading skin.
 - 21-09-2006 fixed: [ 1562562 ] .cdg disappears when restarting song
 - 20-09-2006 fixed: mockup with nav sounds and changing profiles.
 - 20-09-2006 updated: German language file
 - 19-09-2006 fixed: UPnP client now supports UPnP Media Servers with a description doc url other than root (and no URLBase in description doc)
 - 19-09-2006 fixed: Play on folder could cause it to start paused in My Videos
 - 19-09-2006 fixed: <label> wasn't used in a .cut file once the xbe it points to had been read into the database.
 - 19-09-2006 fixed: Don't stack dvd folders in virtual root directory.
 - 19-09-2006 updated: french language file
 - 19-09-2006 fixed: [ 1561135 ] video auto resume not work
 - 19-09-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 18-09-2006 changed: Layer change dvd reading only re-reads blocks if the entire block is NULL.
 - 18-09-2006 fixed: Flicker filter (and other) GUI settings showed "My Programs" instead of their integer level.
 - 18-09-2006 fixed: GUI Flicker filter wasn't applied on boot.
 - 18-09-2006 fixed: custom windows didn't fallback to default skin dirs.
 - 18-09-2006 fixed: .cdg files wouldn't work with library items launched using the http api.
 - 18-09-2006 changed: use DVDCSS_METHOD key instead of title, it will fallback to key if initial attempt fails. 