@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-09-2006 fixed: video settings weren't saved if you skipped file (ACTION_NEXT_ITEM, ACTION_PREV_ITEM).
  - 21-09-2006 fixed: Wordwrapping added an extra (unnecessary) linebreak.  Thanks to Kryzys
  - 21-09-2006 fixed: <origin> tag wasn't reset in windows that didn't have them when loading skin.
  - 21-09-2006 fixed: [ 1562562 ] .cdg disappears when restarting song
